
<package>
  <name>ORB_SLAM2_MSGS</name>
  <version>0.0.0</version>
  <description>The hello_world package</description>
  <maintainer email="rafaga22630@todo.todo">rafaga22630</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
